[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/levels/common/teleporter.gd" type="Script" id=1]

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( 0, -32 )

[sub_resource type="Curve" id=3]
max_value = 2.0
_data = [ Vector2( 0, 1 ), 0.0, -0.863386, 0, 0, Vector2( 0.33945, 2 ), -0.0550518, -0.0550518, 0, 0, Vector2( 0.637615, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 10, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color = Color( 0.360784, 0.831373, 0.866667, 1 )
hue_variation = 0.12
hue_variation_random = 0.8

[node name="Teleporter" type="Area2D"]
z_index = 1
script = ExtResource( 1 )

[node name="TeleporterShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="TeleporterParticle" type="Particles2D" parent="."]
position = Vector2( 0, 16 )
amount = 40
lifetime = 1.5
process_material = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Teleporter_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Teleporter_area_exited"]
